1.JDYBrowseView更换为JDYBrowseViewController 2.关闭图片浏览view的时候，不需要继续执行小图加载大图动画 3.转换坐标改为[UIApplication sharedApplication].keyWindow.rootViewController.view，防止present新viewController坐标不准问题 4.用Masonry实现autolayout，添加横竖屏 5.修改图片加载错乱bug

--- a/JDYBrowse/JDYBrowse/Info.plist
+++ b/JDYBrowse/JDYBrowse/Info.plist
@@ -36,9 +36,7 @@
 		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
+	<array/>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
